# manuscripts-fluorescent-nanoparticles

./: LICENSE  pyproject.toml  readme.md
conda_environments/: base_qd_analysis.yml
docs/: qd-pi-120k_datasheet.md
notebooks-panels/: fig_01,02,03,04,05 fluo still images.ipynb  fig_01,05 qdot properties.ipynb  fig_01,s01 qd_properties_schematic.ipynb  fig_01_histology.ipynb  fig_02,04_decay.ipynb  fig_02,04_spatial_autocorrelation.ipynb  fig_05_unet_schematic.ipynb  fig_06_kneeinjection_closeup.ipynb  fig_s05_bead_comparison.ipynb  fig_s07_photobleaching.ipynb  vid_01,02,03 preview videos.ipynb
notebooks-preprocessing/: 00_histology_analysis.ipynb  01_compute_rolling_background_for_fluorescence_data.ipynb  02_compute_fluorescence_intensity_over_time.ipynb  03_compute_spatial_autocorrelation.ipynb  04_preparing_multicam_keypoint_data_fused.ipynb  05_gathering_keypoint_labels_from_segments.ipynb  06_assessing_fused_keypoint_inference.ipynb  07_building_training_data_with_qdots.ipynb  08_parsing_sleap_grid_search.ipynb  09_parsing_sleap_grid_search_for_auto_keypoint_labeling.ipynb  config.toml
notebooks/panels/: fig_01,02,03,04,05 fluo still images.ipynb  fig_01,05 qdot properties.ipynb  fig_01_histology.ipynb  fig_02,03,05,s9,s13_spatial_autocorrelation_per_prep_and_over_time.ipynb  fig_02,04_decay.ipynb  fig_02,05_histology_round2.ipynb  fig_04,05,s10_keypoint_performance_autolabeled_data.ipynb  fig_05_unet_schematic.ipynb  fig_05_visualizing_performance_on_manual_labels.ipynb  fig_06_kneeinjection_closeup.ipynb  fig_X_xy_position_in_arena_full_dataset.ipynb  (+6 more)
(+23 files in other folders)
